Fix Small Annoyances

--- a/src/core/resource.toml
+++ b/src/core/resource.toml
@@ -2,4 +2,5 @@ type = 'jsv2'
 main = 'server/startup.js'
 client-files = [ 'client/*', 'shared/*' ]
 client-main = 'client/startup.js'
+client-type = 'js'
 deps = []
